<resources>
    <string name="app_name">BudgetTracker</string>
    <string name="action_settings">Settings</string>
    <string name="new_cash_movement_item">New cash movement item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_add_cash_movement_item">Add new item</string>
    <string name="new_category">New category</string>
    <string name="hint_name_of_the_new_category">Name of the new category</string>
    <string name="income">INCOME</string>
    <string name="expense">EXPENSE</string>
    <string name="warn_specify_name">Please specify the name</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="categories">Categories</string>
    <string name="create_new_category">Create new category</string>
    <string name="name_of_the_new_category">Name of the new category</string>
    <string name="manage_categories">Manage categories</string>
    <string name="warn_delete_item">Are you sure you want to delete this item?</string>
    <string name="warn_fill_amount">Please fill in the amount</string>
    <string name="edit_category">Edit category</string>
    <string name="add_category">Add category</string>
    <string name="category_saved">Category saved</string>
    <string name="category_not_saved">Category not saved</string>
    <string name="warn_fill_name_of_category">Please specify the name of the category</string>
    <string name="category_updated">Category updated</string>
    <string name="category_cannot_be_updated">Category cannot be updated</string>
    <string name="warn_delete_category">Are you sure you want to delete this category?
        All items related to this category will be deleted!</string>
    <string name="set_limit">Set limit</string>
    <string name="new_limit">New limit</string>
    <string name="warn_limit_not_loaded">Could not load limit, setting default value</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_tmp_diagrams">Diagrams</string>
    <string name="expenses_diagram">Expenses diagram</string>
    <string name="income_diagram">Income diagram</string>
    <string name="no_date">NO DATE</string>
    <string name="edit_item">Edit item</string>
    <string name="add_new_item">Add new item</string>
    <string name="limit_warning_channel_descr">A channel to warn if you spent 80% of the limit</string>
    <string name="category_load_error">Cannot load category for item %d</string>
    <string name="item_save_error">Item cannot be saved, wrong amount or categoryId</string>
    <string name="item_saved">Item saved</string>
    <string name="item_update_error">Item cannot be updated.</string>
    <string name="item_updated">Item updated</string>
    <string name="item_not_saved">Item not saved</string>
    <string name="limit_warning">Limit warning</string>
    <string name="limit_cross_msg_format">You crossed the %d limit!</string>
    <string name="limit_close_msg_format">You got close to the %d limit!</string>
    <string name="diagrams">Diagrams</string>
    <string name="limit">Limit</string>
    <string name="spent">Spent:</string>
</resources>
