<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    
    <TextView
        android:id="@+id/CategoryTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:layout_alignParentTop="true"/>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/CategoryRecyclerView"
        android:layout_below="@+id/CategoryTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CreateNewCategoryRelativeLayout"/>

    <RelativeLayout
        android:id="@+id/CreateNewCategoryRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CategoryRecyclerView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/create_new_category" />

        <EditText
            android:id="@+id/NewCategoryNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_new_category"/>

        <ToggleButton
            android:id="@+id/CategoryDirectionToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/income"
            android:textOn="@string/expense"/>

    </RelativeLayout>

    <Button
        android:id="@+id/OkSaveCategoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    
    

</RelativeLayout>